--- a/src/components/RenderKeyRows.scss
+++ b/src/components/RenderKeyRows.scss
@@ -4,8 +4,10 @@
   height: 100%;
   width: 100%;
   justify-content: center;
+  padding: 0;
 
   div {
+    padding: 0;
     width: 100%;
     height: 75%;
     display: flex;
@@ -20,6 +22,7 @@
       align-items: center;
       width: 100%;
       height: 100%;
+      padding: 0;
       padding-top: 0.25em;
       border-radius: 0.275em;
       border: none;
